[package]
name = "internal-studio-patcher"
version = "0.1.4"
edition = "2021"
publish = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.4", features = ["derive"] }
iced-x86 = "1.21.0"
goblin = "0.9.3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.51"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
capstone = "0.13.0"
capstone-sys = "0.17.0"